--- a/.htaccess
+++ b/.htaccess
@@ -1,24 +1,30 @@
 # Anti-clickjacking header
+
 Header always set X-Frame-Options "DENY"
 Header always set Content-Security-Policy "frame-ancestors 'none'"
 
 # Prevent browser from detecting content type
+
 Header always set X-Content-Type-Options "nosniff"
 
 # Disable directory browsing
+
 Options -Indexes
 
 # Protect source code files
+
 <FilesMatch "\.(php|js|css)$">
-    Order Deny,Allow
-    Deny from all
+Order Deny,Allow
+Deny from all
 </FilesMatch>
 
 # Custom error pages
+
 ErrorDocument 403 /error/403.html
 ErrorDocument 404 /error/404.html
 
 # Protect against SQL injection
+
 <IfModule mod_rewrite.c>
     RewriteCond %{QUERY_STRING} (\<|%3C).*script.*(\>|%3E) [NC,OR]
     RewriteCond %{QUERY_STRING} GLOBALS(=|\[|\%[0-9A-Z]{0,2}) [OR]
@@ -27,6 +33,7 @@ ErrorDocument 404 /error/404.html
 </IfModule>
 
 # Add cache control headers
+
 <IfModule mod_headers.c>
     # One year for image and video files
     <FilesMatch "\.(jpg|jpeg|png|gif|ico|webp|mp4|webm)$">
@@ -37,5 +44,26 @@ ErrorDocument 404 /error/404.html
     <FilesMatch "\.(css|js)$">
         Header set Cache-Control "max-age=2592000, public"
     </FilesMatch>
+    
+# Prevent viewing source code
+<IfModule mod_rewrite.c>
+    RewriteCond %{THE_REQUEST} \s(.*\.php|.*\.js|.*\.css)\s [NC]
+    RewriteRule ^ - [F,L]
+</IfModule>
+# Prevent access to sensitive files
+    <FilesMatch "\.(ini|js|css|env|txt)$">
+        Order Deny,Allow
+        Deny from all
+    </FilesMatch>
 </IfModule>
 
+# Block access to .htaccess file
+
+<FilesMatch "^\.htaccess$">
+    Order Allow,Deny
+    Deny from all
+</FilesMatch>
+<FilesMatch "\.(js|css)$">
+    Order Allow,Deny
+    Deny from all
+</FilesMatch>
